<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    tools:context=".fragments.AccountFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="Perks Of Logging In?"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:text="@string/perks_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:text="@string/perks_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/perks_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="10dp"
            android:text="@string/perks_4" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="25sp"
        app:cardBackgroundColor="@color/accent"
        android:layout_below="@id/layout"
        app:cardCornerRadius="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Login"
            android:gravity="center"
            android:textSize="18sp"
            android:padding="12dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins" />

    </com.google.android.material.card.MaterialCardView>


    <Button
        android:id="@+id/admin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="false"
        android:padding="10dp"
        android:text="@string/admin"
        android:textSize="16dp"
        android:textStyle="bold" />

</RelativeLayout>